JacuScript/editor-pyqt/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaracion_list
Rule 2     declaracion_list -> declaracion_list declaracion
Rule 3     declaracion_list -> declaracion
Rule 4     declaracion -> var_declaracion
Rule 5     declaracion -> fun_declaracion
Rule 6     declaracion -> libreria
Rule 7     libreria -> IMPORTAME CADENA PUNTOCOMA
Rule 8     var_declaracion -> type_specifier ID PUNTOCOMA
Rule 9     var_declaracion -> type_specifier ID LCORCHETE NUMERO RCORCHETE PUNTOCOMA
Rule 10    var_declaracion -> type_specifier ID IGUAL expression PUNTOCOMA
Rule 11    var_declaracion -> ID IGUAL expression PUNTOCOMA
Rule 12    type_specifier -> ENTERO
Rule 13    type_specifier -> REAL
Rule 14    type_specifier -> BOOL
Rule 15    type_specifier -> CAR
Rule 16    fun_declaracion -> FUNCION ID LPAREN params RPAREN compount_stmt
Rule 17    params -> param_list
Rule 18    params -> empty
Rule 19    param_list -> param_list COMA param
Rule 20    param_list -> param
Rule 21    param_list -> empty
Rule 22    param -> type_specifier ID
Rule 23    param -> type_specifier ID LCORCHETE RCORCHETE
Rule 24    compount_stmt -> LLLAVE local_declarations statement_list RLLAVE
Rule 25    local_declarations -> local_declarations var_declaracion
Rule 26    local_declarations -> empty
Rule 27    statement_list -> statement_list statement
Rule 28    statement_list -> empty
Rule 29    statement -> expression_stmt
Rule 30    statement -> compount_stmt
Rule 31    statement -> selection_stmt
Rule 32    statement -> iteration_stmt
Rule 33    statement -> return_stmt
Rule 34    statement -> para_stmt
Rule 35    statement -> fun_declaracion
Rule 36    expression_stmt -> expression PUNTOCOMA
Rule 37    expression_stmt -> PUNTOCOMA
Rule 38    selection_stmt -> SI LPAREN expression RPAREN statement SINO LPAREN expression RPAREN statement DEPLANO statement
Rule 39    selection_stmt -> SI LPAREN expression RPAREN statement SINO LPAREN expression RPAREN statement
Rule 40    selection_stmt -> SI LPAREN expression RPAREN statement
Rule 41    iteration_stmt -> MIENTRAS LPAREN expression RPAREN statement
Rule 42    para_stmt -> PARA LPAREN expression COMA expression COMA expression RPAREN statement
Rule 43    return_stmt -> REGRESA PUNTOCOMA
Rule 44    return_stmt -> REGRESA expression PUNTOCOMA
Rule 45    expression -> var IGUAL expression
Rule 46    expression -> comp_expression
Rule 47    var -> ID
Rule 48    var -> ID LCORCHETE expression RCORCHETE
Rule 49    comp_expression -> simple_expression compop simple_expression
Rule 50    comp_expression -> simple_expression
Rule 51    compop -> AND
Rule 52    compop -> OR
Rule 53    compop -> XOR
Rule 54    compop -> NOT
Rule 55    simple_expression -> additive_expression relop additive_expression
Rule 56    simple_expression -> additive_expression
Rule 57    relop -> MENOR
Rule 58    relop -> MENORIGUAL
Rule 59    relop -> MAYOR
Rule 60    relop -> MAYORIGUAL
Rule 61    relop -> IGUALDAD
Rule 62    relop -> NEGACION
Rule 63    relop -> DIFERENTE
Rule 64    additive_expression -> additive_expression addop term
Rule 65    additive_expression -> term
Rule 66    addop -> SUMA
Rule 67    addop -> RESTA
Rule 68    term -> term mulop factor
Rule 69    term -> factor
Rule 70    mulop -> PRODUCTO
Rule 71    mulop -> DIVISION
Rule 72    factor -> LPAREN expression RPAREN
Rule 73    factor -> var
Rule 74    factor -> call
Rule 75    factor -> NUMERO
Rule 76    factor -> CADENA
Rule 77    factor -> FLOTANTE
Rule 78    factor -> NULO
Rule 79    call -> ID LPAREN args RPAREN
Rule 80    args -> args_list
Rule 81    args -> empty
Rule 82    args_list -> args_list COMA expression
Rule 83    args_list -> expression
Rule 84    empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
BOOL                 : 14
CADENA               : 7 76
CAR                  : 15
COMA                 : 19 42 42 82
DEPLANO              : 38
DIFERENTE            : 63
DIVISION             : 71
ENTERO               : 12
FLOTANTE             : 77
FUNCION              : 16
ID                   : 8 9 10 11 16 22 23 47 48 79
IGUAL                : 10 11 45
IGUALDAD             : 61
IMPORTAME            : 7
LCORCHETE            : 9 23 48
LLLAVE               : 24
LPAREN               : 16 38 38 39 39 40 41 42 72 79
MAYOR                : 59
MAYORIGUAL           : 60
MENOR                : 57
MENORIGUAL           : 58
MIENTRAS             : 41
NEGACION             : 62
NOT                  : 54
NULO                 : 78
NUMERO               : 9 75
OR                   : 52
PARA                 : 42
PRODUCTO             : 70
PUNTOCOMA            : 7 8 9 10 11 36 37 43 44
RCORCHETE            : 9 23 48
REAL                 : 13
REGRESA              : 43 44
RESTA                : 67
RLLAVE               : 24
RPAREN               : 16 38 38 39 39 40 41 42 72 79
SI                   : 38 39 40
SINO                 : 38 39
SUMA                 : 66
XOR                  : 53
error                : 

Nonterminals, with rules where they appear

additive_expression  : 55 55 56 64
addop                : 64
args                 : 79
args_list            : 80 82
call                 : 74
comp_expression      : 46
compop               : 49
compount_stmt        : 16 30
declaracion          : 2 3
declaracion_list     : 1 2
empty                : 18 21 26 28 81
expression           : 10 11 36 38 38 39 39 40 41 42 42 42 44 45 48 72 82 83
expression_stmt      : 29
factor               : 68 69
fun_declaracion      : 5 35
iteration_stmt       : 32
libreria             : 6
local_declarations   : 24 25
mulop                : 68
para_stmt            : 34
param                : 19 20
param_list           : 17 19
params               : 16
program              : 0
relop                : 55
return_stmt          : 33
selection_stmt       : 31
simple_expression    : 49 49 50
statement            : 27 38 38 38 39 39 40 41 42
statement_list       : 24 27
term                 : 64 65 68
type_specifier       : 8 9 10 22 23
var                  : 45 73
var_declaracion      : 4 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaracion_list
    (2) declaracion_list -> . declaracion_list declaracion
    (3) declaracion_list -> . declaracion
    (4) declaracion -> . var_declaracion
    (5) declaracion -> . fun_declaracion
    (6) declaracion -> . libreria
    (8) var_declaracion -> . type_specifier ID PUNTOCOMA
    (9) var_declaracion -> . type_specifier ID LCORCHETE NUMERO RCORCHETE PUNTOCOMA
    (10) var_declaracion -> . type_specifier ID IGUAL expression PUNTOCOMA
    (11) var_declaracion -> . ID IGUAL expression PUNTOCOMA
    (16) fun_declaracion -> . FUNCION ID LPAREN params RPAREN compount_stmt
    (7) libreria -> . IMPORTAME CADENA PUNTOCOMA
    (12) type_specifier -> . ENTERO
    (13) type_specifier -> . REAL
    (14) type_specifier -> . BOOL
    (15) type_specifier -> . CAR

    ID              shift and go to state 8
    FUNCION         shift and go to state 9
    IMPORTAME       shift and go to state 11
    ENTERO          shift and go to state 7
    REAL            shift and go to state 1
    BOOL            shift and go to state 13
    CAR             shift and go to state 2

    type_specifier                 shift and go to state 3
    libreria                       shift and go to state 10
    var_declaracion                shift and go to state 4
    fun_declaracion                shift and go to state 12
    program                        shift and go to state 5
    declaracion_list               shift and go to state 6
    declaracion                    shift and go to state 14

state 1

    (13) type_specifier -> REAL .

    ID              reduce using rule 13 (type_specifier -> REAL .)


state 2

    (15) type_specifier -> CAR .

    ID              reduce using rule 15 (type_specifier -> CAR .)


state 3

    (8) var_declaracion -> type_specifier . ID PUNTOCOMA
    (9) var_declaracion -> type_specifier . ID LCORCHETE NUMERO RCORCHETE PUNTOCOMA
    (10) var_declaracion -> type_specifier . ID IGUAL expression PUNTOCOMA

    ID              shift and go to state 15


state 4

    (4) declaracion -> var_declaracion .

    ID              reduce using rule 4 (declaracion -> var_declaracion .)
    FUNCION         reduce using rule 4 (declaracion -> var_declaracion .)
    IMPORTAME       reduce using rule 4 (declaracion -> var_declaracion .)
    ENTERO          reduce using rule 4 (declaracion -> var_declaracion .)
    REAL            reduce using rule 4 (declaracion -> var_declaracion .)
    BOOL            reduce using rule 4 (declaracion -> var_declaracion .)
    CAR             reduce using rule 4 (declaracion -> var_declaracion .)
    $end            reduce using rule 4 (declaracion -> var_declaracion .)


state 5

    (0) S' -> program .



state 6

    (1) program -> declaracion_list .
    (2) declaracion_list -> declaracion_list . declaracion
    (4) declaracion -> . var_declaracion
    (5) declaracion -> . fun_declaracion
    (6) declaracion -> . libreria
    (8) var_declaracion -> . type_specifier ID PUNTOCOMA
    (9) var_declaracion -> . type_specifier ID LCORCHETE NUMERO RCORCHETE PUNTOCOMA
    (10) var_declaracion -> . type_specifier ID IGUAL expression PUNTOCOMA
    (11) var_declaracion -> . ID IGUAL expression PUNTOCOMA
    (16) fun_declaracion -> . FUNCION ID LPAREN params RPAREN compount_stmt
    (7) libreria -> . IMPORTAME CADENA PUNTOCOMA
    (12) type_specifier -> . ENTERO
    (13) type_specifier -> . REAL
    (14) type_specifier -> . BOOL
    (15) type_specifier -> . CAR

    $end            reduce using rule 1 (program -> declaracion_list .)
    ID              shift and go to state 8
    FUNCION         shift and go to state 9
    IMPORTAME       shift and go to state 11
    ENTERO          shift and go to state 7
    REAL            shift and go to state 1
    BOOL            shift and go to state 13
    CAR             shift and go to state 2

    type_specifier                 shift and go to state 3
    libreria                       shift and go to state 10
    var_declaracion                shift and go to state 4
    fun_declaracion                shift and go to state 12
    declaracion                    shift and go to state 16

state 7

    (12) type_specifier -> ENTERO .

    ID              reduce using rule 12 (type_specifier -> ENTERO .)


state 8

    (11) var_declaracion -> ID . IGUAL expression PUNTOCOMA

    IGUAL           shift and go to state 17


state 9

    (16) fun_declaracion -> FUNCION . ID LPAREN params RPAREN compount_stmt

    ID              shift and go to state 18


state 10

    (6) declaracion -> libreria .

    ID              reduce using rule 6 (declaracion -> libreria .)
    FUNCION         reduce using rule 6 (declaracion -> libreria .)
    IMPORTAME       reduce using rule 6 (declaracion -> libreria .)
    ENTERO          reduce using rule 6 (declaracion -> libreria .)
    REAL            reduce using rule 6 (declaracion -> libreria .)
    BOOL            reduce using rule 6 (declaracion -> libreria .)
    CAR             reduce using rule 6 (declaracion -> libreria .)
    $end            reduce using rule 6 (declaracion -> libreria .)


state 11

    (7) libreria -> IMPORTAME . CADENA PUNTOCOMA

    CADENA          shift and go to state 19


state 12

    (5) declaracion -> fun_declaracion .

    ID              reduce using rule 5 (declaracion -> fun_declaracion .)
    FUNCION         reduce using rule 5 (declaracion -> fun_declaracion .)
    IMPORTAME       reduce using rule 5 (declaracion -> fun_declaracion .)
    ENTERO          reduce using rule 5 (declaracion -> fun_declaracion .)
    REAL            reduce using rule 5 (declaracion -> fun_declaracion .)
    BOOL            reduce using rule 5 (declaracion -> fun_declaracion .)
    CAR             reduce using rule 5 (declaracion -> fun_declaracion .)
    $end            reduce using rule 5 (declaracion -> fun_declaracion .)


state 13

    (14) type_specifier -> BOOL .

    ID              reduce using rule 14 (type_specifier -> BOOL .)


state 14

    (3) declaracion_list -> declaracion .

    ID              reduce using rule 3 (declaracion_list -> declaracion .)
    FUNCION         reduce using rule 3 (declaracion_list -> declaracion .)
    IMPORTAME       reduce using rule 3 (declaracion_list -> declaracion .)
    ENTERO          reduce using rule 3 (declaracion_list -> declaracion .)
    REAL            reduce using rule 3 (declaracion_list -> declaracion .)
    BOOL            reduce using rule 3 (declaracion_list -> declaracion .)
    CAR             reduce using rule 3 (declaracion_list -> declaracion .)
    $end            reduce using rule 3 (declaracion_list -> declaracion .)


state 15

    (8) var_declaracion -> type_specifier ID . PUNTOCOMA
    (9) var_declaracion -> type_specifier ID . LCORCHETE NUMERO RCORCHETE PUNTOCOMA
    (10) var_declaracion -> type_specifier ID . IGUAL expression PUNTOCOMA

    PUNTOCOMA       shift and go to state 20
    LCORCHETE       shift and go to state 22
    IGUAL           shift and go to state 21


state 16

    (2) declaracion_list -> declaracion_list declaracion .

    ID              reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)
    FUNCION         reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)
    IMPORTAME       reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)
    ENTERO          reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)
    REAL            reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)
    BOOL            reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)
    CAR             reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)
    $end            reduce using rule 2 (declaracion_list -> declaracion_list declaracion .)


state 17

    (11) var_declaracion -> ID IGUAL . expression PUNTOCOMA
    (45) expression -> . var IGUAL expression
    (46) expression -> . comp_expression
    (47) var -> . ID
    (48) var -> . ID LCORCHETE expression RCORCHETE
    (49) comp_expression -> . simple_expression compop simple_expression
    (50) comp_expression -> . simple_expression
    (55) simple_expression -> . additive_expression relop additive_expression
    (56) simple_expression -> . additive_expression
    (64) additive_expression -> . additive_expression addop term
    (65) additive_expression -> . term
    (68) term -> . term mulop factor
    (69) term -> . factor
    (72) factor -> . LPAREN expression RPAREN
    (73) factor -> . var
    (74) factor -> . call
    (75) factor -> . NUMERO
    (76) factor -> . CADENA
    (77) factor -> . FLOTANTE
    (78) factor -> . NULO
    (79) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 33
    LPAREN          shift and go to state 32
    NUMERO          shift and go to state 31
    CADENA          shift and go to state 26
    FLOTANTE        shift and go to state 35
    NULO            shift and go to state 23

    comp_expression                shift and go to state 30
    term                           shift and go to state 34
    call                           shift and go to state 27
    factor                         shift and go to state 28
    var                            shift and go to state 29
    simple_expression              shift and go to state 24
    expression                     shift and go to state 36
    additive_expression            shift and go to state 25

state 18

    (16) fun_declaracion -> FUNCION ID . LPAREN params RPAREN compount_stmt

    LPAREN          shift and go to state 37


state 19

    (7) libreria -> IMPORTAME CADENA . PUNTOCOMA

    PUNTOCOMA       shift and go to state 38


state 20

    (8) var_declaracion -> type_specifier ID PUNTOCOMA .

    ID              reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    FUNCION         reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    IMPORTAME       reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    ENTERO          reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    REAL            reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    BOOL            reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    CAR             reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    $end            reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    RLLAVE          reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    PUNTOCOMA       reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    LLLAVE          reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    SI              reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    MIENTRAS        reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    REGRESA         reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    PARA            reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    LPAREN          reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    NUMERO          reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    CADENA          reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    FLOTANTE        reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)
    NULO            reduce using rule 8 (var_declaracion -> type_specifier ID PUNTOCOMA .)


state 21

    (10) var_declaracion -> type_specifier ID IGUAL . expression PUNTOCOMA
    (45) expression -> . var IGUAL expression
    (46) expression -> . comp_expression
    (47) var -> . ID
    (48) var -> . ID LCORCHETE expression RCORCHETE
    (49) comp_expression -> . simple_expression compop simple_expression
    (50) comp_expression -> . simple_expression
    (55) simple_expression -> . additive_expression relop additive_expression
    (56) simple_expression -> . additive_expression
    (64) additive_expression -> . additive_expression addop term
    (65) additive_expression -> . term
    (68) term -> . term mulop factor
    (69) term -> . factor
    (72) factor -> . LPAREN expression RPAREN
    (73) factor -> . var
    (74) factor -> . call
    (75) factor -> . NUMERO
    (76) factor -> . CADENA
    (77) factor -> . FLOTANTE
    (78) factor -> . NULO
    (79) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 33
    LPAREN          shift and go to state 32
    NUMERO          shift and go to state 31
    CADENA          shift and go to state 26
    FLOTANTE        shift and go to state 35
    NULO            shift and go to state 23

    comp_expression                shift and go to state 30
    term                           shift and go to state 34
    call                           shift and go to state 27
    factor                         shift and go to state 28
    var                            shift and go to state 29
    simple_expression              shift and go to state 24
    expression                     shift and go to state 39
    additive_expression            shift and go to state 25

state 22

    (9) var_declaracion -> type_specifier ID LCORCHETE . NUMERO RCORCHETE PUNTOCOMA

    NUMERO          shift and go to state 40


state 23

    (78) factor -> NULO .

    PRODUCTO        reduce using rule 78 (factor -> NULO .)
    DIVISION        reduce using rule 78 (factor -> NULO .)
    MENOR           reduce using rule 78 (factor -> NULO .)
    MENORIGUAL      reduce using rule 78 (factor -> NULO .)
    MAYOR           reduce using rule 78 (factor -> NULO .)
    MAYORIGUAL      reduce using rule 78 (factor -> NULO .)
    IGUALDAD        reduce using rule 78 (factor -> NULO .)
    NEGACION        reduce using rule 78 (factor -> NULO .)
    DIFERENTE       reduce using rule 78 (factor -> NULO .)
    SUMA            reduce using rule 78 (factor -> NULO .)
    RESTA           reduce using rule 78 (factor -> NULO .)
    AND             reduce using rule 78 (factor -> NULO .)
    OR              reduce using rule 78 (factor -> NULO .)
    XOR             reduce using rule 78 (factor -> NULO .)
    NOT             reduce using rule 78 (factor -> NULO .)
    PUNTOCOMA       reduce using rule 78 (factor -> NULO .)
    RPAREN          reduce using rule 78 (factor -> NULO .)
    COMA            reduce using rule 78 (factor -> NULO .)
    RCORCHETE       reduce using rule 78 (factor -> NULO .)


state 24

    (49) comp_expression -> simple_expression . compop simple_expression
    (50) comp_expression -> simple_expression .
    (51) compop -> . AND
    (52) compop -> . OR
    (53) compop -> . XOR
    (54) compop -> . NOT

    PUNTOCOMA       reduce using rule 50 (comp_expression -> simple_expression .)
    RPAREN          reduce using rule 50 (comp_expression -> simple_expression .)
    COMA            reduce using rule 50 (comp_expression -> simple_expression .)
    RCORCHETE       reduce using rule 50 (comp_expression -> simple_expression .)
    AND             shift and go to state 41
    OR              shift and go to state 45
    XOR             shift and go to state 42
    NOT             shift and go to state 44

    compop                         shift and go to state 43

state 25

    (55) simple_expression -> additive_expression . relop additive_expression
    (56) simple_expression -> additive_expression .
    (64) additive_expression -> additive_expression . addop term
    (57) relop -> . MENOR
    (58) relop -> . MENORIGUAL
    (59) relop -> . MAYOR
    (60) relop -> . MAYORIGUAL
    (61) relop -> . IGUALDAD
    (62) relop -> . NEGACION
    (63) relop -> . DIFERENTE
    (66) addop -> . SUMA
    (67) addop -> . RESTA

    AND             reduce using rule 56 (simple_expression -> additive_expression .)
    OR              reduce using rule 56 (simple_expression -> additive_expression .)
    XOR             reduce using rule 56 (simple_expression -> additive_expression .)
    NOT             reduce using rule 56 (simple_expression -> additive_expression .)
    PUNTOCOMA       reduce using rule 56 (simple_expression -> additive_expression .)
    COMA            reduce using rule 56 (simple_expression -> additive_expression .)
    RPAREN          reduce using rule 56 (simple_expression -> additive_expression .)
    RCORCHETE       reduce using rule 56 (simple_expression -> additive_expression .)
    MENOR           shift and go to state 51
    MENORIGUAL      shift and go to state 54
    MAYOR           shift and go to state 56
    MAYORIGUAL      shift and go to state 53
    IGUALDAD        shift and go to state 49
    NEGACION        shift and go to state 47
    DIFERENTE       shift and go to state 50
    SUMA            shift and go to state 52
    RESTA           shift and go to state 55

    addop                          shift and go to state 46
    relop                          shift and go to state 48

state 26

    (76) factor -> CADENA .

    PRODUCTO        reduce using rule 76 (factor -> CADENA .)
    DIVISION        reduce using rule 76 (factor -> CADENA .)
    MENOR           reduce using rule 76 (factor -> CADENA .)
    MENORIGUAL      reduce using rule 76 (factor -> CADENA .)
    MAYOR           reduce using rule 76 (factor -> CADENA .)
    MAYORIGUAL      reduce using rule 76 (factor -> CADENA .)
    IGUALDAD        reduce using rule 76 (factor -> CADENA .)
    NEGACION        reduce using rule 76 (factor -> CADENA .)
    DIFERENTE       reduce using rule 76 (factor -> CADENA .)
    SUMA            reduce using rule 76 (factor -> CADENA .)
    RESTA           reduce using rule 76 (factor -> CADENA .)
    AND             reduce using rule 76 (factor -> CADENA .)
    OR              reduce using rule 76 (factor -> CADENA .)
    XOR             reduce using rule 76 (factor -> CADENA .)
    NOT             reduce using rule 76 (factor -> CADENA .)
    PUNTOCOMA       reduce using rule 76 (factor -> CADENA .)
    RPAREN          reduce using rule 76 (factor -> CADENA .)
    COMA            reduce using rule 76 (factor -> CADENA .)
    RCORCHETE       reduce using rule 76 (factor -> CADENA .)


state 27

    (74) factor -> call .

    PRODUCTO        reduce using rule 74 (factor -> call .)
    DIVISION        reduce using rule 74 (factor -> call .)
    MENOR           reduce using rule 74 (factor -> call .)
    MENORIGUAL      reduce using rule 74 (factor -> call .)
    MAYOR           reduce using rule 74 (factor -> call .)
    MAYORIGUAL      reduce using rule 74 (factor -> call .)
    IGUALDAD        reduce using rule 74 (factor -> call .)
    NEGACION        reduce using rule 74 (factor -> call .)
    DIFERENTE       reduce using rule 74 (factor -> call .)
    SUMA            reduce using rule 74 (factor -> call .)
    RESTA           reduce using rule 74 (factor -> call .)
    AND             reduce using rule 74 (factor -> call .)
    OR              reduce using rule 74 (factor -> call .)
    XOR             reduce using rule 74 (factor -> call .)
    NOT             reduce using rule 74 (factor -> call .)
    PUNTOCOMA       reduce using rule 74 (factor -> call .)
    RPAREN          reduce using rule 74 (factor -> call .)
    COMA            reduce using rule 74 (factor -> call .)
    RCORCHETE       reduce using rule 74 (factor -> call .)


state 28

    (69) term -> factor .

    PRODUCTO        reduce using rule 69 (term -> factor .)
    DIVISION        reduce using rule 69 (term -> factor .)
    MENOR           reduce using rule 69 (term -> factor .)
    MENORIGUAL      reduce using rule 69 (term -> factor .)
    MAYOR           reduce using rule 69 (term -> factor .)
    MAYORIGUAL      reduce using rule 69 (term -> factor .)
    IGUALDAD        reduce using rule 69 (term -> factor .)
    NEGACION        reduce using rule 69 (term -> factor .)
    DIFERENTE       reduce using rule 69 (term -> factor .)
    SUMA            reduce using rule 69 (term -> factor .)
    RESTA           reduce using rule 69 (term -> factor .)
    AND             reduce using rule 69 (term -> factor .)
    OR              reduce using rule 69 (term -> factor .)
    XOR             reduce using rule 69 (term -> factor .)
    NOT             reduce using rule 69 (term -> factor .)
    COMA            reduce using rule 69 (term -> factor .)
    RPAREN          reduce using rule 69 (term -> factor .)
    PUNTOCOMA       reduce using rule 69 (term -> factor .)
    RCORCHETE       reduce using rule 69 (term -> factor .)


state 29

    (45) expression -> var . IGUAL expression
    (73) factor -> var .

    IGUAL           shift and go to state 57
    PRODUCTO        reduce using rule 73 (factor -> var .)
    DIVISION        reduce using rule 73 (factor -> var .)
    MENOR           reduce using rule 73 (factor -> var .)
    MENORIGUAL      reduce using rule 73 (factor -> var .)
    MAYOR           reduce using rule 73 (factor -> var .)
    MAYORIGUAL      reduce using rule 73 (factor -> var .)
    IGUALDAD        reduce using rule 73 (factor -> var .)
    NEGACION        reduce using rule 73 (factor -> var .)
    DIFERENTE       reduce using rule 73 (factor -> var .)
    SUMA            reduce using rule 73 (factor -> var .)
    RESTA           reduce using rule 73 (factor -> var .)
    AND             reduce using rule 73 (factor -> var .)
    OR              reduce using rule 73 (factor -> var .)
    XOR             reduce using rule 73 (factor -> var .)
    NOT             reduce using rule 73 (factor -> var .)
    PUNTOCOMA       reduce using rule 73 (factor -> var .)
    RPAREN          reduce using rule 73 (factor -> var .)
    COMA            reduce using rule 73 (factor -> var .)
    RCORCHETE       reduce using rule 73 (factor -> var .)


state 30

    (46) expression -> comp_expression .
